# ChromiumUpdaterQt

./: .gitignore  .travis.yml  CMakeLists.txt  ChromiumUpdaterQt.pro  README.md  chromiumupdater.hpp  chromiumupdaterwidget.cpp  chromiumupdaterwidget.h  main.cpp
